Fix z-index of image-grid-image selected icon

--- a/src/resources/assets/sass/components/_image-grid-image.scss
+++ b/src/resources/assets/sass/components/_image-grid-image.scss
@@ -73,6 +73,7 @@
     }
 
     .image-icon {
+        z-index: 1;
         position: absolute;
         display: flex;
         align-items: center;
